--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Maher Dagestaniiiiii
+title: My Protfolio
 describtion: a swe student @ kfupm
 show_downloads: true
 theme: jekyll-theme-cayman
